// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box borders handles a single border edge 1`] = `
.emotion-0 {
  border-left: 1px solid;
  border-color: #28a745;
}

<div
  className="emotion-0"
/>
`;

exports[`Box borders handles border prop 1`] = `
.emotion-0 {
  border: 1px solid;
}

<div
  className="emotion-0"
/>
`;

exports[`Box borders handles just a border color 1`] = `
.emotion-0 {
  border-color: #d73a49;
}

<div
  className="emotion-0"
/>
`;

exports[`Box borders handles multiple border edges 1`] = `
.emotion-0 {
  border-right: 1px solid;
  border-left: 1px solid;
  border-color: #e1e4e8;
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders margin 1`] = `
.emotion-0 {
  margin: 4px;
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders margin 2`] = `
.emotion-0 {
  margin: 0px;
}

@media screen and (min-width:544px) {
  .emotion-0 {
    margin: 4px;
  }
}

@media screen and (min-width:768px) {
  .emotion-0 {
    margin: 8px;
  }
}

@media screen and (min-width:1012px) {
  .emotion-0 {
    margin: 16px;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders margin 3`] = `
.emotion-0 {
  margin: 4px;
}

@media screen and (min-width:544px) {
  .emotion-0 {
    margin: 4px;
  }
}

@media screen and (min-width:768px) {
  .emotion-0 {
    margin: 4px;
  }
}

@media screen and (min-width:1012px) {
  .emotion-0 {
    margin: 16px;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders padding 1`] = `
.emotion-0 {
  padding: 4px;
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders padding 2`] = `
.emotion-0 {
  padding: 0px;
}

@media screen and (min-width:544px) {
  .emotion-0 {
    padding: 4px;
  }
}

@media screen and (min-width:768px) {
  .emotion-0 {
    padding: 8px;
  }
}

@media screen and (min-width:1012px) {
  .emotion-0 {
    padding: 16px;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders padding 3`] = `
.emotion-0 {
  padding: 4px;
}

@media screen and (min-width:544px) {
  .emotion-0 {
    padding: 4px;
  }
}

@media screen and (min-width:768px) {
  .emotion-0 {
    padding: 4px;
  }
}

@media screen and (min-width:1012px) {
  .emotion-0 {
    padding: 16px;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders shadow 1`] = `
.emotion-0 {
  box-shadow: 0 1px 1px rgba(27,31,35,0.1);
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders shadow 2`] = `
.emotion-0 {
  box-shadow: 0 1px 5px rgba(27,31,35,0.15);
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders shadow 3`] = `
.emotion-0 {
  box-shadow: 0 1px 15px rgba(27,31,35,0.15);
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders shadow 4`] = `
.emotion-0 {
  box-shadow: 0 10px 50px rgba(27,31,35,0.07);
}

<div
  className="emotion-0"
/>
`;

exports[`Box renders without any props 1`] = `
<div
  className="emotion-0"
/>
`;

exports[`Box respects display 1`] = `
.emotion-0 {
  display: inline;
}

<div
  className="emotion-0"
/>
`;

exports[`Box respects display 2`] = `
.emotion-0 {
  display: inline-block;
}

<div
  className="emotion-0"
/>
`;

exports[`Box respects display 3`] = `
.emotion-0 {
  display: none;
}

<div
  className="emotion-0"
/>
`;

exports[`Box respects display 4`] = `
.emotion-0 {
  display: none;
}

@media screen and (min-width:544px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .emotion-0 {
    display: block;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`Box respects position 1`] = `
<div
  className="emotion-0"
  position="absolute"
/>
`;

exports[`Box respects position 2`] = `
<div
  className="emotion-0"
  position="relative"
/>
`;
